--- a/index.html
+++ b/index.html
@@ -3,9 +3,21 @@
     <head>
         <meta charset="utf-8">
         <link rel="stylesheet" href="opmaak.css">
-        <title>Home Page</title>
+        <script src="https://kit.fontawesome.com/a076d05399.js"></script>
+        <title>Sofie Weetink</title>
     </head>
     <body>
-        <h1>Hello World!</h1>
+       <nav>
+        <input type="checkbox" id="check">
+        <label for="check" class="checkbtn">
+            <i class="fas fa-bars"></i>
+        </label>
+        <label class="name">Sofie Weetink</label>
+        <ul>
+            <li><a class="active" href="index.html">Home</a></li>
+            <li><a href="projects.html">Projects</a></li>
+            <li><a href="pictures.html">Pictures</a></li>
+        </ul>
+       </nav>
     </body>
 </html>
