--- a/pictures.html
+++ b/pictures.html
@@ -3,15 +3,15 @@
     <head>
         <meta charset="utf-8">
         <link rel="stylesheet" href="opmaak.css">
-        <script src="https://kit.fontawesome.com/a076d05399.js"></script>
+        <script src="script.js" defer></script>
         <title>Sofie Weetink</title>
-        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family-Material+Symbols+Rounded:opsz,wght,FILL,GRAD@48,400,0,0">
+        <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     </head>
     <body>
         <nav>
             <input type="checkbox" id="check">
             <label for="check" class="checkbtn">
-                <i class="fas fa-bars"></i>
+                <i class="material-icons">reorder</i>
             </label>
             <label class="name">Sofie Weetink</label>
             <ul>
@@ -20,10 +20,13 @@
                 <li><a class="active" href="pictures.html">Pictures</a></li>
             </ul>
         </nav>
+        <div class="photo-text">
+            <h2>Pictures ...</h2>
+        </div>
         <section>
-            <div class="photos">
+            <div class="photos p1">
                 <div class="slider-wrapper">
-                    <button class="slide-button material-symbols-rounded">chevron_left</button>
+                    <button id="prev-slide" class="slide-button material-icons">keyboard_arrow_left</button>
                     <div class="image-list">
                         <img src="images/IMG_1213.JPG" alt="img-1" class="image-item">
                         <img src="images/IMG_1285.JPG" alt="img-2" class="image-item">
@@ -33,10 +36,12 @@
                         <img src="images/IMG_1445.JPG" alt="img-6" class="image-item">
                         <img src="images/IMG_1504.JPG" alt="img-7" class="image-item">
                         <img src="images/IMG_1531.JPG" alt="img-8" class="image-item">
-                        <img src="images/IMG_1787.JPG" alt="img-9" class="image-item">
+                        
                         <img src="images/IMG_1841.JPG" alt="img-10" class="image-item">
                         <img src="images/IMG_2101.JPG" alt="img-11" class="image-item">
+                        <img src="images/IMG_1787.JPG" alt="img-9" class="image-item">
                     </div>
+                    <button id="next-slide" class="slide-button material-icons">keyboard_arrow_right</button>
                 </div>
                 <div class="slider-scrollbar">
                     <div class="scrollbar-track">
@@ -46,18 +51,35 @@
             </div>
         </section>
 
-
-
-
-
-       <section>
-        <h2>Concert Photo's</h2>
-        <div class="photos">
-            <img src="pictures/IMG_1213.JPG" alt="bi">
-            <img src="pictures/IMG_1285.JPG" alt="">
-            <img src="pictures/IMG_1287.JPG" alt="">
-            <img src="pictures/IMG_1362.JPG" alt="">
+        <div class="photo-text">
+            <h2>Pictures ...</h2>
         </div>
-       </section>
+        <section>
+            <div class="photos p2">
+                <div class="slider-wrapper">
+                    <button id="prev-slide" class="slide-button material-icons">keyboard_arrow_left</button>
+                    <div class="image-list">
+                        <img src="images/IMG_1213.JPG" alt="img-1" class="image-item">
+                        <img src="images/IMG_1285.JPG" alt="img-2" class="image-item">
+                        <img src="images/IMG_1287.JPG" alt="img-3" class="image-item">
+                        <img src="images/IMG_1362.JPG" alt="img-4" class="image-item">
+                        <img src="images/IMG_1442.JPG" alt="img-5" class="image-item">
+                        <img src="images/IMG_1445.JPG" alt="img-6" class="image-item">
+                        <img src="images/IMG_1504.JPG" alt="img-7" class="image-item">
+                        <img src="images/IMG_1531.JPG" alt="img-8" class="image-item">
+                        
+                        <img src="images/IMG_1841.JPG" alt="img-10" class="image-item">
+                        <img src="images/IMG_2101.JPG" alt="img-11" class="image-item">
+                        <img src="images/IMG_1787.JPG" alt="img-9" class="image-item">
+                    </div>
+                    <button id="next-slide" class="slide-button material-icons">keyboard_arrow_right</button>
+                </div>
+                <div class="slider-scrollbar">
+                    <div class="scrollbar-track">
+                        <div class="scrollbar-thumb"></div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </body>
 </html>
