Added projects and main
Projects added and a home page with text.
Phone friendly

--- a/index.html
+++ b/index.html
@@ -3,21 +3,46 @@
     <head>
         <meta charset="utf-8">
         <link rel="stylesheet" href="opmaak.css">
-        <script src="https://kit.fontawesome.com/a076d05399.js"></script>
+        <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Sofie Weetink</title>
     </head>
-    <body>
+    <body class="index">
        <nav>
         <input type="checkbox" id="check">
         <label for="check" class="checkbtn">
-            <i class="fas fa-bars"></i>
+            <i class="material-icons">reorder</i>
         </label>
         <label class="name">Sofie Weetink</label>
         <ul>
             <li><a class="active" href="index.html">Home</a></li>
             <li><a href="projects.html">Projects</a></li>
             <li><a href="pictures.html">Pictures</a></li>
+            <li><a href="#contact">Contact</a></li>
         </ul>
        </nav>
+       <div class="prof-box">
+            <div class="prof_picture">
+                <img src="images/ik.jpeg" alt="image of me">
+            </div>
+            <div class="prof_text">
+                <p>Hi, I'm Sofie a 17-years-old student at <a href="https://hetmml.nl/">Metis Montessori Lyceum</a>
+                    I am part of the <a href="https://hetmml.nl/vakken/coderclass/">Coderclass</a>. 
+                    This is a special subject in my school where you learn all sort of program languages. You can see some of my programming projects under the tab: <a href="projects.html">projects</a>.
+                    My projects include game made with python and blender but also some app-develepment with python-flask and ruby.<br><br>
+                    Outside of school I love photography, but I also love music. So why don't combine the two and take awesome pictures at a concert.
+                    Exploring new places and capturing those moments with my camera is also something I like. You can find my favourite pictures under the tab: <a href="pictures.html">pictures</a>.
+                    Other hobbies include skiing, watching great movies and series and playing boardgames with my friends. <br><br>
+                    I have worked in some different places like the supermarket, Albert Heijn and as a program teacher in a summercamp by <a href="https://coderminds.nl/">CoderMinds</a>. 
+                    Now I work in a cozy little restaurant in the centrum of Amsterdam called <a href="https://www.eetcafekopvanjut.nl/welkom/">Kop van Jut</a>. Next year I want to get my ski instructor degree and become a ski instructor in Austria.
+                </p>
+            </div>
+        </div>
+       
+        <footer id="contact">
+            <div><img src="images/instagram.png" alt=""><p>Insta: </p><a href="#">Sofie_Weetink</a></div>
+            <div><img src="images/github.png" alt=""><p>Github: </p><a href="https://github.com/sofie-w">sofie-w</a></div>
+            <div><img src="images/linkedin.png" alt=""><p>LinkedIn: </p><a href="#">Sofie Weetink</a></div>
+        </footer>
     </body>
 </html>
