--- a/pictures.html
+++ b/pictures.html
@@ -4,6 +4,7 @@
         <meta charset="utf-8">
         <link rel="stylesheet" href="opmaak.css">
         <script src="script.js" defer></script>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Sofie Weetink</title>
         <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     </head>
@@ -11,17 +12,18 @@
         <nav>
             <input type="checkbox" id="check">
             <label for="check" class="checkbtn">
-                <i class="material-icons">reorder</i>
+                <i class="materia   l-icons">reorder</i>
             </label>
             <label class="name">Sofie Weetink</label>
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="projects.html">Projects</a></li>
                 <li><a class="active" href="pictures.html">Pictures</a></li>
+                <li><a href="#contact">Contact</a></li>
             </ul>
         </nav>
         <div class="photo-text">
-            <h2>Pictures ...</h2>
+            <h2>Concert</h2>
         </div>
         <section>
             <div class="photos p1">
@@ -52,7 +54,7 @@
         </section>
 
         <div class="photo-text">
-            <h2>Pictures ...</h2>
+            <h2>Landscape</h2>
         </div>
         <section>
             <div class="photos p2">
@@ -81,5 +83,10 @@
                 </div>
             </div>
         </section>
+        <footer id="contact">
+            <div><img src="images/instagram.png" alt=""><p>Insta: </p><a href="#">Sofie_Weetink</a></div>
+            <div><img src="images/github.png" alt=""><p>Github: </p><a href="https://github.com/sofie-w">sofie-w</a></div>
+            <div><img src="images/linkedin.png" alt=""><p>LinkedIn: </p><a href="#">Sofie Weetink</a></div>
+        </footer>
     </body>
 </html>
