--- a/projects.html
+++ b/projects.html
@@ -3,21 +3,135 @@
     <head>
         <meta charset="utf-8">
         <link rel="stylesheet" href="opmaak.css">
-        <script src="https://kit.fontawesome.com/a076d05399.js"></script>
+        <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Sofie Weetink</title>
     </head>
     <body>
        <nav>
         <input type="checkbox" id="check">
         <label for="check" class="checkbtn">
-            <i class="fas fa-bars"></i>
+            <i class="material-icons">reorder</i>
         </label>
         <label class="name">Sofie Weetink</label>
         <ul>
             <li><a href="index.html">Home</a></li>
             <li><a class="active" href="projects.html">Projects</a></li>
             <li><a href="pictures.html">Pictures</a></li>
+            <li><a href="#contact">Contact</a></li>
         </ul>
        </nav>
+        <div class="project-box">
+            <div class="project-text">
+                <h2>PyGame Adventure Game</h2>
+                <p>A captivating 2D adventure game built using PyGame. Explore the different maps and overcome the discrete enemies you meet on your way. 
+                    Find all the food and make sure you eat enough while making use off all the different wapens.
+                    With simple (WASD) controls and a cute art style. Will you conquer every obstacle and win the game?
+                </p><br>
+                <a href="https://github.com/sofie-w/AdventureGame">Github</a>
+            </div>
+            <div class="project-photo">
+                <img src="images/Pygame-adventure.PNG" alt="image pygame" width="80%">
+            </div>
+        </div>
+
+        <div class="project-box">
+            <div class="project-photo">
+                <img src="images/python-textgame.PNG" alt="image text game" width="80%">
+            </div>
+            <div class="project-text">
+                <h2>Python Text-Based Adventure Game</h2>
+                <p>A text based game written in python.</p><br>
+                <a href="https://github.com/sofie-w/Python-TextGame">Github</a>
+            </div>
+        </div>
+
+        <div class="project-box">
+            <div class="project-text">
+                <h2>C++ (uva of vu)</h2>
+                <p>Participated in C++ lectures and made assignments and got a diploma for it.</p><br>
+                <a href="#">Linkje studie?</a>
+            </div>
+            <div class="project-photo">
+                <img src="images/cplusplus-genmaze.png" alt="image c++" width="80%">
+            </div>
+        </div>
+
+        <div class="project-box">
+            <div class="project-photo">
+                <img src="images/blender-farmgame.png" alt="image blender game" width="80%">
+            </div>
+            <div class="project-text">
+                <h2>Blender Farm Game</h2>
+                <p>My first game in blender. A farming simulator game.</p><br>
+                <a href="#">lINKJE idk</a>
+            </div>
+        </div>
+
+        <div class="project-box">
+            <div class="project-text">
+                <h2>Leeftijd van een kind met AI</h2>
+                <p>Trained an AI with my own dataset to make a prediction of the age of the child. 
+                    Used Tensorflow and Keras made in Google colab so I could use an online GPU.
+                </p><br>
+                <a href="https://colab.research.google.com/drive/1vB5FLIL_SKv5r4HvrHZ5d_W7KdmL8jTK?authuser=1">Code: Model</a>
+                <a href="https://colab.research.google.com/drive/17AltDyQZ2rcym3qqMxY12llqaNcnn7_T?authuser=1">Code: Predict</a>
+                <a href="downloads/trained_model_2.h5" download>Download My Model</a>
+            </div>
+            <div class="project-photo">
+                <img src="images/python-tensorflow-ai.png" alt="image ai" width="80%">
+            </div>
+        </div>
+
+        <div class="project-box">
+            <div class="project-photo">
+                <img src="images/ruby-on-rails.PNG" alt="image ruby on rails website" width="80%">
+            </div>
+            <div class="project-text">
+                <h2>Ruby on Rails App</h2>
+                <p>Ideas App</p><br>
+                <a href="https://github.com/sofie-w/ruby-on-rails_ideas-app">Github</a>
+            </div>
+        </div>
+
+        <div class="project-box">
+            <div class="project-text">
+                <h2>TicTacToe in Ruby</h2>
+                <p>Participated in C++ lectures and made assignments and got a diploma for it.</p><br>
+                <a href="https://github.com/sofie-w/Ruby-tictactoe">Github</a>
+            </div>
+            <div class="project-photo">
+                <img src="images/ruby-tictactoe.png" alt="image TicTacToe" width="80%">
+            </div>
+        </div>
+
+        <div class="project-box">
+            <div class="project-photo">
+                <img src="images/python_flask.png" alt="image blender game" width="80%">
+            </div>
+            <div class="project-text">
+                <h2>Python flask</h2>
+                <p>My first game in blender. A farming simulator game.</p><br>
+                <a href="https://github.com/sofie-w/WebdevelopmentPython">Github</a>
+            </div>
+        </div>
+
+        <div class="project-box">
+            <div class="project-text">
+                <h2>Python programs</h2>
+                <p>Different python programs like Wordle and a studie program</p><br>
+                <a href="https://github.com/sofie-w/Contact-List">Contact List</a>
+                <a href="https://github.com/sofie-w/Wordmind">Wordle</a>
+                <a href="https://github.com/sofie-w/Overhoor-quiz">Translate Quiz</a>
+            </div>
+            <div class="project-photo">
+                <img src="images/python-programs.png" alt="image python programs" width="80%">
+            </div>
+        </div>
+        <footer id="contact">
+            <div><img src="images/instagram.png" alt=""><p>Insta: </p><a href="#">Sofie_Weetink</a></div>
+            <div><img src="images/github.png" alt=""><p>Github: </p><a href="https://github.com/sofie-w">sofie-w</a></div>
+            <div><img src="images/linkedin.png" alt=""><p>LinkedIn: </p><a href="#">Sofie Weetink</a></div>
+        </footer>
     </body>
 </html>
