--- a/projects.html
+++ b/projects.html
@@ -8,124 +8,125 @@
         <title>Sofie Weetink</title>
     </head>
     <body>
-       <nav>
-        <input type="checkbox" id="check">
-        <label for="check" class="checkbtn">
-            <i class="material-icons">reorder</i>
-        </label>
-        <label class="name">Sofie Weetink</label>
-        <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a class="active" href="projects.html">Projects</a></li>
-            <li><a href="pictures.html">Pictures</a></li>
-            <li><a href="#contact">Contact</a></li>
-        </ul>
+        <nav>
+            <input type="checkbox" id="check">
+            <label for="check" class="checkbtn">
+                <i class="material-icons">reorder</i>
+            </label>
+            <label class="name">Sofie Weetink</label>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a class="active" href="projects.html">Projects</a></li>
+                <li><a href="pictures.html">Pictures</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
        </nav>
-        <div class="project-box">
+       <div class="project-box">
             <div class="project-text">
-                <h2>PyGame Adventure Game</h2>
+                <h2>Predict age of child with AI - 2024</h2>
+                <p>A self trained Ai, trained to predict the age of the child based on their drawing.
+                    By analyzing the style and complexity of the artwork the AI makes a prediction.
+                    Made with Tensorflow and Keras and written in Google Colab so I could use an online GPU
+                </p><br>
+                <a href="https://colab.research.google.com/drive/1vB5FLIL_SKv5r4HvrHZ5d_W7KdmL8jTK?authuser=1">Code: Model</a>
+                <a href="https://colab.research.google.com/drive/17AltDyQZ2rcym3qqMxY12llqaNcnn7_T?authuser=1">Code: Predict</a>
+                <a href="downloads/trained_model_2.h5" download>Download</a>
+            </div>
+            <div class="project-photo">
+                <img src="images/python-tensorflow-ai.png" alt="image ai" width="80%">
+            </div>
+        </div>
+        <div class="project-box">
+            <div class="project-photo">
+                <img src="images/Pygame-adventure.PNG" alt="image pygame" width="80%">
+            </div>
+            <div class="project-text">
+                <h2>PyGame Adventure Game - 2023</h2>
                 <p>A captivating 2D adventure game built using PyGame. Explore the different maps and overcome the discrete enemies you meet on your way. 
                     Find all the food and make sure you eat enough while making use off all the different wapens.
                     With simple (WASD) controls and a cute art style. Will you conquer every obstacle and win the game?
                 </p><br>
                 <a href="https://github.com/sofie-w/AdventureGame">Github</a>
             </div>
-            <div class="project-photo">
-                <img src="images/Pygame-adventure.PNG" alt="image pygame" width="80%">
-            </div>
         </div>
-
         <div class="project-box">
+            <div class="project-text">
+                <h2>Python Text-Based Adventure Game - 2023</h2>
+                <p>A text-based adventure escape room game written in python. Trapped in a house with different room, with monsters and treachers.
+                    Defaut the monsters and find the keys to escape. Can you defeat this text-based game?  
+                </p><br>
+                <a href="https://github.com/sofie-w/Python-TextGame">Github</a>
+            </div>
             <div class="project-photo">
                 <img src="images/python-textgame.PNG" alt="image text game" width="80%">
             </div>
-            <div class="project-text">
-                <h2>Python Text-Based Adventure Game</h2>
-                <p>A text based game written in python.</p><br>
-                <a href="https://github.com/sofie-w/Python-TextGame">Github</a>
-            </div>
         </div>
-
         <div class="project-box">
-            <div class="project-text">
-                <h2>C++ (uva of vu)</h2>
-                <p>Participated in C++ lectures and made assignments and got a diploma for it.</p><br>
-                <a href="#">Linkje studie?</a>
-            </div>
             <div class="project-photo">
                 <img src="images/cplusplus-genmaze.png" alt="image c++" width="80%">
             </div>
+            <div class="project-text">
+                <h2>C++ (uva of vu) - 2022</h2>
+                <p>I participated in a C++ course at the VU. We had to do several assignments and solve problems like the Tower of Hanoi, 
+                    8 Queens and as the final assignment a random maze generator. All made in C++. In the end we got an offical diploma for this course on the VU.     
+                </p><br>
+                <a href="https://vu.nl/nl/onderwijs/bachelor/computer-science">VU Studie</a>
+            </div>
         </div>
-
         <div class="project-box">
+            <div class="project-text">
+                <h2>Blender Farm Game - 2022</h2>
+                <p>This is my first game in blender. It's a farming game where you need to manage your crops, sell the plants and expand your farm.</p><br>
+                <a href="downloads/FarmSimulator-pause.exe" download>Download Game</a>
+            </div>
             <div class="project-photo">
                 <img src="images/blender-farmgame.png" alt="image blender game" width="80%">
             </div>
-            <div class="project-text">
-                <h2>Blender Farm Game</h2>
-                <p>My first game in blender. A farming simulator game.</p><br>
-                <a href="#">lINKJE idk</a>
-            </div>
         </div>
-
-        <div class="project-box">
-            <div class="project-text">
-                <h2>Leeftijd van een kind met AI</h2>
-                <p>Trained an AI with my own dataset to make a prediction of the age of the child. 
-                    Used Tensorflow and Keras made in Google colab so I could use an online GPU.
-                </p><br>
-                <a href="https://colab.research.google.com/drive/1vB5FLIL_SKv5r4HvrHZ5d_W7KdmL8jTK?authuser=1">Code: Model</a>
-                <a href="https://colab.research.google.com/drive/17AltDyQZ2rcym3qqMxY12llqaNcnn7_T?authuser=1">Code: Predict</a>
-                <a href="downloads/trained_model_2.h5" download>Download My Model</a>
-            </div>
-            <div class="project-photo">
-                <img src="images/python-tensorflow-ai.png" alt="image ai" width="80%">
-            </div>
-        </div>
-
-        <div class="project-box">
-            <div class="project-photo">
-                <img src="images/ruby-on-rails.PNG" alt="image ruby on rails website" width="80%">
-            </div>
-            <div class="project-text">
-                <h2>Ruby on Rails App</h2>
-                <p>Ideas App</p><br>
-                <a href="https://github.com/sofie-w/ruby-on-rails_ideas-app">Github</a>
-            </div>
-        </div>
-
-        <div class="project-box">
-            <div class="project-text">
-                <h2>TicTacToe in Ruby</h2>
-                <p>Participated in C++ lectures and made assignments and got a diploma for it.</p><br>
-                <a href="https://github.com/sofie-w/Ruby-tictactoe">Github</a>
-            </div>
-            <div class="project-photo">
-                <img src="images/ruby-tictactoe.png" alt="image TicTacToe" width="80%">
-            </div>
-        </div>
-
         <div class="project-box">
             <div class="project-photo">
                 <img src="images/python_flask.png" alt="image blender game" width="80%">
             </div>
             <div class="project-text">
-                <h2>Python flask</h2>
-                <p>My first game in blender. A farming simulator game.</p><br>
+                <h2>Python flask - 2021</h2>
+                <p>On this website, with use of python-flask, you could view all sort of movies and "put them in your shopping cart". Sadly this website is not online anymore.</p><br>
                 <a href="https://github.com/sofie-w/WebdevelopmentPython">Github</a>
             </div>
         </div>
-
         <div class="project-box">
             <div class="project-text">
-                <h2>Python programs</h2>
-                <p>Different python programs like Wordle and a studie program</p><br>
+                <h2>Python programs - 2020</h2>
+                <p>Some python programs I made for school assignments like the game Wordle, a studie quiz, where you can put new words in wordlists and learn them.
+                    But also a contact list where you can add, edit and view your contacts. 
+                </p><br>
                 <a href="https://github.com/sofie-w/Contact-List">Contact List</a>
                 <a href="https://github.com/sofie-w/Wordmind">Wordle</a>
                 <a href="https://github.com/sofie-w/Overhoor-quiz">Translate Quiz</a>
             </div>
             <div class="project-photo">
                 <img src="images/python-programs.png" alt="image python programs" width="80%">
+            </div>
+        </div>
+        <div class="project-box">
+            <div class="project-photo">
+                <img src="images/ruby-on-rails.PNG" alt="image ruby on rails website" width="80%">
+            </div>
+            <div class="project-text">
+                <h2>Ruby on Rails App - 2019</h2>
+                <p>I participated in a curcus from RailsGirls where we learn to make an app with ruby on rails. In the end I made an app where you can put 
+                    fun ideas and view ideas from other people. Sadly this website isn't online anymore. 
+                </p><br>
+                <a href="https://github.com/sofie-w/ruby-on-rails_ideas-app">Github</a>
+            </div>
+        </div>
+        <div class="project-box">
+            <div class="project-text">
+                <h2>TicTacToe in Ruby - 2019</h2>
+                <p>The well famous TicTacToe game made with ruby.</p><br>
+                <a href="https://github.com/sofie-w/Ruby-tictactoe">Github</a>
+            </div>
+            <div class="project-photo">
+                <img src="images/ruby-tictactoe.png" alt="image TicTacToe" width="80%">
             </div>
         </div>
         <footer id="contact">
