photos, comments, responsive
change photo;s to the right ones
wrote commands with everything
made nav bar better responsive

--- a/pictures.html
+++ b/pictures.html
@@ -19,70 +19,86 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="projects.html">Projects</a></li>
                 <li><a class="active" href="pictures.html">Pictures</a></li>
-                <li><a href="#contact">Contact</a></li>
+                <li><a class="contact" href="#contact">Contact</a></li>
             </ul>
         </nav>
         <div class="photo-text">
-            <h2>Concert</h2>
+            <h2>Concert photography</h2>
         </div>
-        <section>
-            <div class="photos p1">
-                <div class="slider-wrapper">
-                    <button id="prev-slide" class="slide-button material-icons">keyboard_arrow_left</button>
-                    <div class="image-list">
-                        <img src="images/IMG_1213.JPG" alt="img-1" class="image-item">
-                        <img src="images/IMG_1285.JPG" alt="img-2" class="image-item">
-                        <img src="images/IMG_1287.JPG" alt="img-3" class="image-item">
-                        <img src="images/IMG_1362.JPG" alt="img-4" class="image-item">
-                        <img src="images/IMG_1442.JPG" alt="img-5" class="image-item">
-                        <img src="images/IMG_1445.JPG" alt="img-6" class="image-item">
-                        <img src="images/IMG_1504.JPG" alt="img-7" class="image-item">
-                        <img src="images/IMG_1531.JPG" alt="img-8" class="image-item">
-                        
-                        <img src="images/IMG_1841.JPG" alt="img-10" class="image-item">
-                        <img src="images/IMG_2101.JPG" alt="img-11" class="image-item">
-                        <img src="images/IMG_1787.JPG" alt="img-9" class="image-item">
-                    </div>
-                    <button id="next-slide" class="slide-button material-icons">keyboard_arrow_right</button>
+        <div class="photos p1">
+            <div class="slider-wrapper">
+                <button id="prev-slide" class="slide-button material-icons">keyboard_arrow_left</button>
+                <div class="image-list">
+                    <img src="images/concert_photos/dylan_1.jpg" alt="img-1" class="image-item">
+                    <img src="images/concert_photos/dylan_2.jpg" alt="img-2" class="image-item">
+                    <img src="images/concert_photos/dylan_3.jpg" alt="img-3" class="image-item">
+                    <img src="images/concert_photos/dylan_4.jpg" alt="img-4" class="image-item">
+                    <img src="images/concert_photos/stien_1.jpg" alt="img-5" class="image-item">
+                    <img src="images/concert_photos/stien_2.jpg" alt="img-6" class="image-item">
+                    <img src="images/concert_photos/Froukje_1.jpg" alt="img-7" class="image-item">
+                    <img src="images/concert_photos/froukje_2.jpg" alt="img-8" class="image-item">
+                    <img src="images/concert_photos/des-rocs_1.jpg" alt="img-9" class="image-item">
+                    <img src="images/concert_photos/des-rocs_2.jpg" alt="img-10" class="image-item">
+                    <img src="images/concert_photos/des-rocs_3.jpg" alt="img-11" class="image-item">
+                    <img src="images/concert_photos/Close-to-fire_1.jpg" alt="img-12" class="image-item">
+                    <img src="images/concert_photos/close-to-fire_2.jpg" alt="img-13" class="image-item">
+                    <img src="images/concert_photos/modernlove_1.jpg" alt="img-14" class="image-item">
                 </div>
-                <div class="slider-scrollbar">
-                    <div class="scrollbar-track">
-                        <div class="scrollbar-thumb"></div>
-                    </div>
+                <button id="next-slide" class="slide-button material-icons">keyboard_arrow_right</button>
+            </div>
+            <div class="slider-scrollbar">
+                <div class="scrollbar-track">
+                    <div class="scrollbar-thumb"></div>
                 </div>
             </div>
+        </div>
         </section>
 
         <div class="photo-text">
-            <h2>Landscape</h2>
+            <h2>Landscape photography</h2>
         </div>
-        <section>
-            <div class="photos p2">
-                <div class="slider-wrapper">
-                    <button id="prev-slide" class="slide-button material-icons">keyboard_arrow_left</button>
-                    <div class="image-list">
-                        <img src="images/IMG_1213.JPG" alt="img-1" class="image-item">
-                        <img src="images/IMG_1285.JPG" alt="img-2" class="image-item">
-                        <img src="images/IMG_1287.JPG" alt="img-3" class="image-item">
-                        <img src="images/IMG_1362.JPG" alt="img-4" class="image-item">
-                        <img src="images/IMG_1442.JPG" alt="img-5" class="image-item">
-                        <img src="images/IMG_1445.JPG" alt="img-6" class="image-item">
-                        <img src="images/IMG_1504.JPG" alt="img-7" class="image-item">
-                        <img src="images/IMG_1531.JPG" alt="img-8" class="image-item">
-                        
-                        <img src="images/IMG_1841.JPG" alt="img-10" class="image-item">
-                        <img src="images/IMG_2101.JPG" alt="img-11" class="image-item">
-                        <img src="images/IMG_1787.JPG" alt="img-9" class="image-item">
-                    </div>
-                    <button id="next-slide" class="slide-button material-icons">keyboard_arrow_right</button>
+        <div class="photos p2">
+            <div class="slider-wrapper">
+                <button id="prev-slide" class="slide-button material-icons">keyboard_arrow_left</button>
+                <div class="image-list">
+                    <img src="images/nature_photos/canada_1.jpg" alt="img-1" class="image-item">
+                    <img src="images/nature_photos/canada_2.jpg" alt="img-2" class="image-item">
+                    <img src="images/nature_photos/scheveningen_1.jpg" alt="img-3" class="image-item">
+                    <img src="images/nature_photos/Amsterdam_1.jpg" alt="img-4" class="image-item">
+                    <img src="images/nature_photos/Tignes_1.jpg" alt="img-5" class="image-item">
+                    <img src="images/nature_photos/Tignes_2.jpg" alt="img-6" class="image-item">
                 </div>
-                <div class="slider-scrollbar">
-                    <div class="scrollbar-track">
-                        <div class="scrollbar-thumb"></div>
-                    </div>
+                <button id="next-slide" class="slide-button material-icons">keyboard_arrow_right</button>
+            </div>
+            <div class="slider-scrollbar">
+                <div class="scrollbar-track">
+                    <div class="scrollbar-thumb"></div>
                 </div>
             </div>
-        </section>
+        </div>
+
+        <div class="photo-text">
+            <h2>Animal photography</h2>
+        </div>
+        <div class="photos p3">
+            <div class="slider-wrapper">
+                <button id="prev-slide" class="slide-button material-icons">keyboard_arrow_left</button>
+                <div class="image-list">
+                    <img src="images/animal_photos/bird_1.jpg" alt="img-1" class="image-item">
+                    <img src="images/animal_photos/bird_2.jpg" alt="img-2" class="image-item">
+                    <img src="images/animal_photos/bird_3.jpg" alt="img-3" class="image-item">
+                    <img src="images/animal_photos/chipmunk_1.jpg" alt="img-4" class="image-item">
+                    <img src="images/animal_photos/cat_1.jpg" alt="img-5" class="image-item">
+                    <img src="images/animal_photos/cat_2.jpg" alt="img-6" class="image-item">
+                </div>
+                <button id="next-slide" class="slide-button material-icons">keyboard_arrow_right</button>
+            </div>
+            <div class="slider-scrollbar">
+                <div class="scrollbar-track">
+                    <div class="scrollbar-thumb"></div>
+                </div>
+            </div>
+        </div>
         <footer id="contact">
             <div><img src="images/instagram.png" alt=""><p>Insta: </p><a href="#">Sofie_Weetink</a></div>
             <div><img src="images/github.png" alt=""><p>Github: </p><a href="https://github.com/sofie-w">sofie-w</a></div>
