--- a/index.html
+++ b/index.html
@@ -10,15 +10,13 @@
     <body class="index">
        <nav>
         <input type="checkbox" id="check">
-        <label for="check" class="checkbtn">
-            <i class="material-icons">reorder</i>
-        </label>
+        <label for="check" class="checkbtn"><i class="material-icons">reorder</i></label>
         <label class="name">Sofie Weetink</label>
         <ul>
             <li><a class="active" href="index.html">Home</a></li>
             <li><a href="projects.html">Projects</a></li>
             <li><a href="pictures.html">Pictures</a></li>
-            <li><a href="#contact">Contact</a></li>
+            <li><a class="contact" href="#contact">Contact</a></li>
         </ul>
        </nav>
        <div class="prof-box">
