--- a/projects.html
+++ b/projects.html
@@ -18,7 +18,7 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a class="active" href="projects.html">Projects</a></li>
                 <li><a href="pictures.html">Pictures</a></li>
-                <li><a href="#contact">Contact</a></li>
+                <li><a class="contact" href="#contact">Contact</a></li>
             </ul>
        </nav>
        <div class="project-box">
