--- a/pictures.html
+++ b/pictures.html
@@ -25,7 +25,7 @@
         <div class="photo-text">
             <h2>Concert photography</h2>
         </div>
-        <div class="photos p1">
+        <div id="photos" class="p1">
             <div class="slider-wrapper">
                 <button id="prev-slide" class="slide-button material-icons">keyboard_arrow_left</button>
                 <div class="image-list">
@@ -57,7 +57,7 @@
         <div class="photo-text">
             <h2>Landscape photography</h2>
         </div>
-        <div class="photos p2">
+        <div id="photos" class="p2">
             <div class="slider-wrapper">
                 <button id="prev-slide" class="slide-button material-icons">keyboard_arrow_left</button>
                 <div class="image-list">
@@ -80,7 +80,7 @@
         <div class="photo-text">
             <h2>Animal photography</h2>
         </div>
-        <div class="photos p3">
+        <div id="photos" class="p3">
             <div class="slider-wrapper">
                 <button id="prev-slide" class="slide-button material-icons">keyboard_arrow_left</button>
                 <div class="image-list">
