--- a/pictures.html
+++ b/pictures.html
@@ -11,9 +11,7 @@
     <body>
         <nav>
             <input type="checkbox" id="check">
-            <label for="check" class="checkbtn">
-                <i class="materia   l-icons">reorder</i>
-            </label>
+            <label for="check" class="checkbtn"><i class="material-icons">reorder</i></label>
             <label class="name">Sofie Weetink</label>
             <ul>
                 <li><a href="index.html">Home</a></li>
