--- a/projects.html
+++ b/projects.html
@@ -10,9 +10,7 @@
     <body>
         <nav>
             <input type="checkbox" id="check">
-            <label for="check" class="checkbtn">
-                <i class="material-icons">reorder</i>
-            </label>
+            <label for="check" class="checkbtn"><i class="material-icons">reorder</i></label>
             <label class="name">Sofie Weetink</label>
             <ul>
                 <li><a href="index.html">Home</a></li>
